--- a/index.html
+++ b/index.html
@@ -133,8 +133,8 @@
 
             <div data-aos="flip-up" data-aos-delay="160" class="col-sm-6 col-md-4">
               <div class="thumbnail">
-                <a class="lightbox" href="9.png">
-                  <img src="9.png">
+                <a class="lightbox" href="2025-05-01-a.heic">
+                  <img src="2025-05-01-a.heic">
                 </a>
               </div>
             </div>
